# Vision-Based-Ball-Bearing-Collect-Robot

_idea/: _name  modules.xml  workspace.xml
catkin_ws/src/botbot_common/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/botbot_common/cmake/: compile_options.cmake  compile_warnings.cmake  eigen_function.cmake  project_settings.cmake  unit_tests.cmake
catkin_ws/src/botbot_common/include/botbot_common/: CsvWriter.hpp  MathUtils.hpp  SignalFilter.hpp  ThreadPool.hpp  TicToc.hpp  VectorXY.hpp  VehicleParams.hpp
catkin_ws/src/botbot_common/src/: MathUtils.cpp  SignalFilter.cpp  ThreadPool.cpp  TicToc.cpp  VectorXY.cpp
catkin_ws/src/botbot_common/test/: unit_tests.cpp
catkin_ws/src/botbot_msgs/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/botbot_msgs/msg/: VehicleState.msg
catkin_ws/src/botbot_planner/: CMakeLists.txt  README.md  _gitignore  package.xml
catkin_ws/src/botbot_planner/cfg/: config.yaml
catkin_ws/src/botbot_planner/launch/: main.launch
catkin_ws/src/botbot_planner/src/: AlgorithmNode.cpp  Main.cpp
catkin_ws/src/botbot_sim/: CMakeLists.txt  package.xml
catkin_ws/src/botbot_sim/launch/: main.launch
catkin_ws/src/botbot_sim/msg/: MyCustomMessage.msg
catkin_ws/src/botbot_sim/src/: Main.cpp
catkin_ws/src/botbot_sim/test/: unit_tests.cpp
catkin_ws/src/botbot_slam/: CMakeLists.txt  package.xml
catkin_ws/src/botbot_slam/launch/: main.launch
catkin_ws/src/botbot_slam/src/: AlgorithmNode.hpp  Main.cpp
docker/: Dockerfile  create.sh
python/: Readme.md  arena_gui.py  encoder.py  main.py  main.txt  main_class.py  motor.py  motor_tmp.py  path_planner.py  propulsion.py  real_main.py  save_video.py  scanner.py  sonic.py  target_detector.py  target_detector_class.py  target_detector_parallel .txt  target_detector_parallel.py  utils.py  vehicle_model.py  vehicle_real.py  videoCaptureTest.py
