<?xml version="1.0"?>
<package format="2">
  <name>botbot_msgs</name>
  <version>0.0.0</version>
  <description>
    Package containing messages for BotBot
  </description>

  <maintainer email="jack@coleman.com">JC</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
